crates/yuck/src/parser/snapshots/yuck__parser__lexer__yuck_lexer-4.snap
---
source: crates/yuck/src/parser/lexer.rs
expression: "Lexer::new(0, r#\"{ \"   \" + music}\"#.to_string()).collect_vec()"

---
[
    Ok(
        (
            0,
            SimplExpr(
                "{ \"\u{f001}   \" + music}",
            ),
            18,
        ),
    ),
]
