crates/yuck/src/parser/snapshots/yuck__parser__lexer__yuck_lexer.snap
---
source: crates/yuck/src/parser/lexer.rs
expression: "Lexer::new(0, r#\"(foo + - \"text\" )\"#.to_string()).collect_vec()"

---
[
    Ok(
        (
            0,
            LPren,
            1,
        ),
    ),
    Ok(
        (
            1,
            Symbol(
                "foo",
            ),
            4,
        ),
    ),
    Ok(
        (
            5,
            Symbol(
                "+",
            ),
            6,
        ),
    ),
    Ok(
        (
            7,
            Symbol(
                "-",
            ),
            8,
        ),
    ),
    Ok(
        (
            9,
            StrLit(
                "\"text\"",
            ),
            15,
        ),
    ),
    Ok(
        (
            16,
            RPren,
            17,
        ),
    ),
]
